--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,12 @@
         android:id="@+id/jjsv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
-
+    <com.cjj.sva.widget.CircleSearchView
+        android:id="@+id/mEditCircleSearch"
+        android:layout_centerInParent="true"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="" />
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
